--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <div class="collapse navbar-collapse" id="myNavigation">
                     <ul class="nav navbar-nav navbar-right animated flipInX">
                         <li><a href="#about" class="scroll">About Me</a></li>
-                        <li><a href="#portfolio" class="scroll">My Work</a></li>
+                        <li><a href="#design" class="scroll">Design Projects</a></li>
+                        <li><a href="#code" class="scroll">Coding Projects</a></li>
                         <li><a href="#contact" class="scroll">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -252,7 +253,7 @@
     <!-- ==========================
         SERVICER - START
     =========================== -->
-    <section id="services" class="content-second">
+    <section id="design" class="content-second">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -300,7 +301,7 @@
      <!-- ==========================
     	SHOWCASE - START
     =========================== -->
-    <section id="portfolio" class="content-second">
+    <section id="code" class="content-second">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
